# getting-started-ros

./: README.md
demoFiles/: loadIpAddresses.m  startupDemo.m
demoFiles/Algorithms/: controlLib.slx  controlParams.m  controlParamsGazebo.m  detectCircle.m  trackCircle.m
demoFiles/MATLAB/: gazeboExampleMATLAB.m  turtleBotExampleMATLAB.m  webcamExampleMATLAB.m
demoFiles/MATLAB/timer/: MyRobot.m  gazeboExampleTimer.m  robotTimerFcn.m  turtlebotExampleTimer.m
demoFiles/Simulink/: gazeboExampleExternal.slx  gazeboExampleSimulink.slx  gazeboExampleStateflow.slx  turtleBotExampleExternal.slx  turtleBotExampleSimulink.slx  turtleBotExampleStateflow.slx  webcamExampleSimulink.slx  webcamExampleStateflow.slx
demoFiles/Simulink/distributed/: gazeboExampleControl.slx  gazeboExampleControlCustom.slx  gazeboExampleMultitasking.slx  gazeboExamplePerception.slx  gazeboExamplePerceptionCustom.slx  gazeboExampleVisualizer.slx  turtlebotExampleControl.slx  turtlebotExampleControlCustom.slx  turtlebotExampleMultitasking.slx  turtlebotExamplePerception.slx  (+2 more)
demoFiles/Simulink/distributed/custom_robot_msgs/: CMakeLists.txt  package.xml
demoFiles/Simulink/distributed/custom_robot_msgs/msg/: circle_detection.msg
templateFiles/: startupTemplates.m
templateFiles/MATLAB/: RobotTemplateClass.m  loopTemplate.m  myControlAlgorithm.m  myPerceptionAlgorithm.m  rateTemplate.m
templateFiles/Simulink/: codeGenerationTemplate.slx  multirateTemplate.slx  paramServerGetterTemplate.slx  paramServerSetterTemplate.slx  simulationTemplate.slx
templateFiles/work/: dummy.txt
(+12 files in other folders)
