<package format="2">
	<name>custom_robot_msgs</name>
	<version>1.0.42</version>
	<description>Custom messages for robotics demo</description>
	<maintainer email="roboticsarena@mathworks.com">MathWorks Student Competitions Team</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<exec_depend>message_runtime</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	
</package>